# ScreenPushSender

./: README.md  build.gradle
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/ckzn/jrtptest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/ckzn/jrtptest/: MainActivity.java  PushService.java  RtpSendManager.java  SendTool.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/ckzn/jrtptest/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
